Geração requirements.txt, notebooks spark e organização das pastas

--- a/notebooks/with_spark/load_csv_movimentos.ipynb
+++ b/notebooks/with_spark/load_csv_movimentos.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +76,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id_movimento</th>\n",
        "      <th>vlr_transacao_movimento</th>\n",
        "      <th>descricao_transacao_movimento</th>\n",
        "      <th>data_movimento</th>\n",
@@ -85,6 +86,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>151.55</td>\n",
        "      <td>Academia - Mensalidade</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -92,6 +94,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>458.92</td>\n",
        "      <td>Academia - Mensalidade</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -99,6 +102,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>215.90</td>\n",
        "      <td>E-commerce - Compra online</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -106,6 +110,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>429.70</td>\n",
        "      <td>Supermercado - Compra de alimentos</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -113,6 +118,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>236.52</td>\n",
        "      <td>Posto de Gasolina - Abastecimento</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -124,9 +130,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>188795</th>\n",
+       "      <td>188796</td>\n",
        "      <td>239.47</td>\n",
        "      <td>Farmácia - Medicamentos</td>\n",
        "      <td>2025-03-02</td>\n",
@@ -134,6 +142,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>188796</th>\n",
+       "      <td>188797</td>\n",
        "      <td>359.34</td>\n",
        "      <td>Academia - Mensalidade</td>\n",
        "      <td>2025-03-02</td>\n",
@@ -141,6 +150,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>188797</th>\n",
+       "      <td>188798</td>\n",
        "      <td>299.79</td>\n",
        "      <td>Cinema - Ingresso</td>\n",
        "      <td>2025-03-02</td>\n",
@@ -148,6 +158,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>188798</th>\n",
+       "      <td>188799</td>\n",
        "      <td>354.85</td>\n",
        "      <td>Cinema - Ingresso</td>\n",
        "      <td>2025-03-02</td>\n",
@@ -155,6 +166,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>188799</th>\n",
+       "      <td>188800</td>\n",
        "      <td>228.89</td>\n",
        "      <td>Supermercado - Compra de alimentos</td>\n",
        "      <td>2025-03-02</td>\n",
@@ -162,40 +174,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>188800 rows × 4 columns</p>\n",
+       "<p>188800 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        vlr_transacao_movimento       descricao_transacao_movimento  \\\n",
-       "0                        151.55              Academia - Mensalidade   \n",
-       "1                        458.92              Academia - Mensalidade   \n",
-       "2                        215.90          E-commerce - Compra online   \n",
-       "3                        429.70  Supermercado - Compra de alimentos   \n",
-       "4                        236.52   Posto de Gasolina - Abastecimento   \n",
-       "...                         ...                                 ...   \n",
-       "188795                   239.47             Farmácia - Medicamentos   \n",
-       "188796                   359.34              Academia - Mensalidade   \n",
-       "188797                   299.79                   Cinema - Ingresso   \n",
-       "188798                   354.85                   Cinema - Ingresso   \n",
-       "188799                   228.89  Supermercado - Compra de alimentos   \n",
+       "        id_movimento  vlr_transacao_movimento  \\\n",
+       "0                  1                   151.55   \n",
+       "1                  2                   458.92   \n",
+       "2                  3                   215.90   \n",
+       "3                  4                   429.70   \n",
+       "4                  5                   236.52   \n",
+       "...              ...                      ...   \n",
+       "188795        188796                   239.47   \n",
+       "188796        188797                   359.34   \n",
+       "188797        188798                   299.79   \n",
+       "188798        188799                   354.85   \n",
+       "188799        188800                   228.89   \n",
        "\n",
-       "       data_movimento  id_cartao  \n",
-       "0          2020-01-01        132  \n",
-       "1          2020-01-01          5  \n",
-       "2          2020-01-01        229  \n",
-       "3          2020-01-01        211  \n",
-       "4          2020-01-01        163  \n",
-       "...               ...        ...  \n",
-       "188795     2025-03-02        198  \n",
-       "188796     2025-03-02         48  \n",
-       "188797     2025-03-02        107  \n",
-       "188798     2025-03-02         74  \n",
-       "188799     2025-03-02        226  \n",
+       "             descricao_transacao_movimento data_movimento  id_cartao  \n",
+       "0                   Academia - Mensalidade     2020-01-01        132  \n",
+       "1                   Academia - Mensalidade     2020-01-01          5  \n",
+       "2               E-commerce - Compra online     2020-01-01        229  \n",
+       "3       Supermercado - Compra de alimentos     2020-01-01        211  \n",
+       "4        Posto de Gasolina - Abastecimento     2020-01-01        163  \n",
+       "...                                    ...            ...        ...  \n",
+       "188795             Farmácia - Medicamentos     2025-03-02        198  \n",
+       "188796              Academia - Mensalidade     2025-03-02         48  \n",
+       "188797                   Cinema - Ingresso     2025-03-02        107  \n",
+       "188798                   Cinema - Ingresso     2025-03-02         74  \n",
+       "188799  Supermercado - Compra de alimentos     2025-03-02        226  \n",
        "\n",
-       "[188800 rows x 4 columns]"
+       "[188800 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +238,7 @@
        "188800"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
