--- a/notebooks/without_spark/load_csv_contas.ipynb
+++ b/notebooks/without_spark/load_csv_contas.ipynb
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/cartoes.csv')"
+    "df = pd.read_csv('../data/contas.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,101 +76,113 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>numero_cartao</th>\n",
-       "      <th>nome_impresso_cartao</th>\n",
        "      <th>id_conta</th>\n",
+       "      <th>tipo_conta</th>\n",
+       "      <th>data_criacao_conta</th>\n",
+       "      <th>id_associado</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7269387609542645</td>\n",
-       "      <td>CALEBE SILVA</td>\n",
-       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>poupança</td>\n",
+       "      <td>2024-11-19 04:47:07</td>\n",
+       "      <td>57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1898576762220121</td>\n",
-       "      <td>CAUÊ MONTEIRO</td>\n",
-       "      <td>142</td>\n",
+       "      <td>2</td>\n",
+       "      <td>salário</td>\n",
+       "      <td>2022-07-06 07:52:40</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1251737351627617</td>\n",
-       "      <td>CAIO CARDOSO</td>\n",
-       "      <td>76</td>\n",
+       "      <td>3</td>\n",
+       "      <td>poupança</td>\n",
+       "      <td>2024-05-12 16:15:28</td>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8220865092674455</td>\n",
-       "      <td>BRENO FARIAS</td>\n",
-       "      <td>22</td>\n",
+       "      <td>4</td>\n",
+       "      <td>corrente</td>\n",
+       "      <td>2020-05-17 01:44:45</td>\n",
+       "      <td>86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3001194374676302</td>\n",
-       "      <td>ISABELLA MOURA</td>\n",
-       "      <td>65</td>\n",
+       "      <td>5</td>\n",
+       "      <td>poupança</td>\n",
+       "      <td>2024-01-11 08:03:24</td>\n",
+       "      <td>94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>3276822726568180</td>\n",
-       "      <td>SOFIA CUNHA</td>\n",
-       "      <td>1</td>\n",
+       "      <th>145</th>\n",
+       "      <td>146</td>\n",
+       "      <td>salário</td>\n",
+       "      <td>2021-01-20 12:10:32</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>1611437037361787</td>\n",
-       "      <td>CAIO CARDOSO</td>\n",
-       "      <td>129</td>\n",
+       "      <th>146</th>\n",
+       "      <td>147</td>\n",
+       "      <td>corrente</td>\n",
+       "      <td>2023-05-28 07:27:38</td>\n",
+       "      <td>77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>9582698405144232</td>\n",
-       "      <td>JOÃO GUILHERME LOPES</td>\n",
-       "      <td>121</td>\n",
+       "      <th>147</th>\n",
+       "      <td>148</td>\n",
+       "      <td>poupança</td>\n",
+       "      <td>2024-01-29 15:14:08</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>2031512240544406</td>\n",
-       "      <td>LUIZ HENRIQUE REZENDE</td>\n",
-       "      <td>42</td>\n",
+       "      <th>148</th>\n",
+       "      <td>149</td>\n",
+       "      <td>investimento</td>\n",
+       "      <td>2021-09-23 22:43:23</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>2543014955094122</td>\n",
-       "      <td>LUIZ HENRIQUE REZENDE</td>\n",
-       "      <td>42</td>\n",
+       "      <th>149</th>\n",
+       "      <td>150</td>\n",
+       "      <td>salário</td>\n",
+       "      <td>2023-02-27 16:35:09</td>\n",
+       "      <td>77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>250 rows × 3 columns</p>\n",
+       "<p>150 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        numero_cartao   nome_impresso_cartao  id_conta\n",
-       "0    7269387609542645           CALEBE SILVA       148\n",
-       "1    1898576762220121          CAUÊ MONTEIRO       142\n",
-       "2    1251737351627617           CAIO CARDOSO        76\n",
-       "3    8220865092674455           BRENO FARIAS        22\n",
-       "4    3001194374676302         ISABELLA MOURA        65\n",
-       "..                ...                    ...       ...\n",
-       "245  3276822726568180            SOFIA CUNHA         1\n",
-       "246  1611437037361787           CAIO CARDOSO       129\n",
-       "247  9582698405144232   JOÃO GUILHERME LOPES       121\n",
-       "248  2031512240544406  LUIZ HENRIQUE REZENDE        42\n",
-       "249  2543014955094122  LUIZ HENRIQUE REZENDE        42\n",
+       "     id_conta    tipo_conta   data_criacao_conta  id_associado\n",
+       "0           1      poupança  2024-11-19 04:47:07            57\n",
+       "1           2       salário  2022-07-06 07:52:40            28\n",
+       "2           3      poupança  2024-05-12 16:15:28            66\n",
+       "3           4      corrente  2020-05-17 01:44:45            86\n",
+       "4           5      poupança  2024-01-11 08:03:24            94\n",
+       "..        ...           ...                  ...           ...\n",
+       "145       146       salário  2021-01-20 12:10:32            46\n",
+       "146       147      corrente  2023-05-28 07:27:38            77\n",
+       "147       148      poupança  2024-01-29 15:14:08            48\n",
+       "148       149  investimento  2021-09-23 22:43:23            52\n",
+       "149       150       salário  2023-02-27 16:35:09            77\n",
        "\n",
-       "[250 rows x 3 columns]"
+       "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,33 +193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'id_cartao' in df.columns:\n",
+    "if 'id_conta' in df.columns:\n",
     "\n",
-    "    df = df.drop(columns=['id_cartao'])"
+    "    df = df.drop(columns=['id_conta'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "250"
+       "150"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.to_sql(name='cartao', con=engine, if_exists=\"append\", index=False)"
+    "df.to_sql(name='conta', con=engine, if_exists=\"append\", index=False)"
    ]
   }
  ],
