--- a/notebooks/without_spark/load_csv_associados.ipynb
+++ b/notebooks/without_spark/load_csv_associados.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "username = 'sicooperative'\n",
-    "password = 'sicooperative'\n",
+    "password = 'admin'\n",
     "host     = 'localhost'\n",
     "database = 'sicooperative'"
    ]
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/associados.csv')"
+    "df = pd.read_csv('../../data/associados.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
