--- a/notebooks/without_spark/load_csv_contas.ipynb
+++ b/notebooks/without_spark/load_csv_contas.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "username = 'sicooperative'\n",
-    "password = 'sicooperative'\n",
+    "password = 'admin'\n",
     "host     = 'localhost'\n",
     "database = 'sicooperative'"
    ]
@@ -47,12 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/contas.csv')"
+    "df = pd.read_csv('../../data/contas.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "150"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
