--- a/notebooks/without_spark/gera_csvs.ipynb
+++ b/notebooks/without_spark/gera_csvs.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "username = 'sicooperative'\n",
-    "password = 'sicooperative'\n",
+    "password = 'admin'\n",
     "host     = 'localhost'\n",
     "database = 'sicooperative'"
    ]
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_associado.to_csv('associados.csv', index=False, encoding=\"utf-8\")"
+    "df_associado.to_csv('../../data/associados.csv', index=False, encoding=\"utf-8\")"
    ]
   },
   {
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_conta.to_csv('contas.csv', index=False, encoding=\"utf-8\")"
+    "df_conta.to_csv('../../data/contas.csv', index=False, encoding=\"utf-8\")"
    ]
   },
   {
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cartao.to_csv('cartoes.csv', index=False, encoding=\"utf-8\")"
+    "df_cartao.to_csv('../../data/cartoes.csv', index=False, encoding=\"utf-8\")"
    ]
   },
   {
@@ -106,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_movimento.to_csv('movimentos.csv', index=False, encoding=\"utf-8\")"
+    "df_movimento.to_csv('../../data/movimentos.csv', index=False, encoding=\"utf-8\")"
    ]
   }
  ],
