--- a/notebooks/without_spark/load_csv_movimentos.ipynb
+++ b/notebooks/without_spark/load_csv_movimentos.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "username = 'sicooperative'\n",
-    "password = 'sicooperative'\n",
+    "password = 'admin'\n",
     "host     = 'localhost'\n",
     "database = 'sicooperative'"
    ]
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/movimentos.csv')"
+    "df = pd.read_csv('../../data/movimentos.csv')"
    ]
   },
   {
